--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center
+    justify-content: center;
 }
 
 .instagram-wrapper {
